clusters/homelab/apps/bookmarks/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookmarks
  labels:
    gateway.infra.services/allow-routes: "true"
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
