clusters/homelab/apps/bookmarks/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: karakeep
  namespace: bookmarks
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "bookmarks.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: web
          port: 3000
